<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout"
    tools:context=".SmsAnalyzerActivity" >

    <LinearLayout
        style="@style/BaseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" 
        android:paddingBottom="60dp">
       
        <TextView
            android:id="@+id/textView"
            style="@style/BaseText.BaseControl.TextHeader"
            android:text="@string/SmsTrashList" />

        <ListView
            android:id="@android:id/list"
            style="@style/BaseText.BaseControl.ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:textFilterEnabled="false" 
            android:dividerHeight="4dp"
            android:divider="#000000"
            />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmptySmsList" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnNeedTrashSms"
            style="@style/BaseText.BaseControl.ButtonSms"
            
            android:onClick="NeedSms"
            android:text="@string/NotSpamButton" >
        </Button>

        <Button
            android:id="@+id/btnDeleteTrashSms"
            style="@style/BaseText.BaseControl.ButtonSms"
            android:onClick="DeleteSms"
            android:text="@string/DeleteButton" >
        </Button>
        
        <Button
            android:id="@+id/btnTrashClearAll"
            style="@style/BaseText.BaseControl.ButtonSms"
            
            android:onClick="ClearAll"
            android:text="@string/ClearAll" >
        </Button>
    </LinearLayout>

</RelativeLayout>