<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout"
    tools:context=".BillingActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:alpha="1"
        android:contentDescription="TitleImage"
        android:background="#80000000"
        android:layout_marginBottom="20dp"
        android:src="@drawable/jalapeno"
        />

    <TextView
        android:id="@+id/textView"
        style="@style/BaseControl"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/BillingBuyText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="normal" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/BaseControl.Button"
        android:onClick="Buy"
        android:text="@string/BillingBuyButton" />

    <Button
        android:id="@+id/buttonDebugRegister"
        style="@style/BaseControl.Button.Debug"
        android:text="@string/TestRegister"
        android:visibility="invisible" 
        android:onClick="Buy"/>

</LinearLayout>