<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLayout"
    tools:context=".SmsAnalyzerActivity" >

    <TextView
        android:id="@+id/textAccessInfo"
        style="@style/BaseText.BaseControl.Text"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" />
    
    <TextView
        android:id="@+id/textEarlyAccess"
        style="@style/BaseText.BaseControl"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/EarlyAccessText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSpammerList"
                style="@style/BaseText.JalapenoImageButton"
                android:drawableTop="@drawable/ico_spammers"
                android:onClick="ViewSpamerList"
                android:text="@string/KnownSpammerList" />

            <Button
                android:id="@+id/buttonSmsValidate"
                style="@style/BaseText.JalapenoImageButton"
                android:drawableTop="@drawable/ico_sms"
                android:onClick="smsValidate"
                android:text="@string/SmsValidateList" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSmsTrash"
                style="@style/BaseText.JalapenoImageButton"
                android:drawableTop="@drawable/ico_trash"
                android:onClick="smsTrash"
                android:text="@string/SmsTrashList" />

            <Button
                android:id="@+id/toggleEnabled"
                style="@style/BaseText.JalapenoImageButton"
                android:drawableTop="@drawable/ico_switch_on"
                android:onClick="toggleClick"
                android:text="@string/AntiSpamOn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>